# geometry-rs

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: release.yml  rust.yml
benches/: bench.rs  bench_az.rs  bench_tx.rs
examples/: demo.rs
src/: lib.rs
src/next_after/: mod.rs
