[package]
name = "geometry-rs"
version = "0.3.1"
edition = "2021"
license = "MIT"
description = "geometry utils"
homepage = "https://github.com/ringsaturn/geometry-rs"
documentation = "https://docs.rs/geometry-rs/latest/geometry_rs/"
repository = "https://github.com/ringsaturn/geometry-rs"
readme = "README.md"
keywords = ["geometry"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
float_next_after = "1.0.0"

[dev-dependencies]
geo = "0.30.0"
serde = "1.0.217"
serde_derive = "1.0.217"
serde_json = "1.0.138"
