[package]
name = "geometry-rs"
version = "0.4.1"
edition = "2024"
license = "MIT"
description = "geometry utils"
homepage = "https://github.com/ringsaturn/geometry-rs"
documentation = "https://docs.rs/geometry-rs/latest/geometry_rs/"
repository = "https://github.com/ringsaturn/geometry-rs"
readme = "README.md"
keywords = ["geometry"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rtree_rs = "0.1.4"

[dev-dependencies]
geo = "0.32.0"
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.149"
